updated listening and fixed dark mode bug + Styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -58,6 +58,8 @@ p,.p {
 }
 .core{
   border-radius: 10px;
+  background-color: rgb(36, 36, 36);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 .btn-lg {
   font-family: var(--normal-font-family);
